
  - spot::contains() still defaults to the complementation-based
    algorithm, however by calling
    spot::containment_select_version("forq") or by setting
    SPOT_CONTAINMENT_CHECK=forq in the environment, the
    spot::contains_forq() implementation will be used instead when
    applicable (inclusion between Büchi automata).

    The above also impacts autfilt --included-in option.

  - spot::scc_info has a new option PROCESS_UNREACHABLE_STATES that
    causes it to enumerate even unreachable SCCs.

  - spot::realizability_simplifier is a new class that performs the
    removal of superfluous APs that is now performed by ltlsynt
    (search for --polarity and --global-equivalence above).

  - scc_filter used to reduce automata tagged with the inherently-weak
    property to weak Büchi automata (unless the acceptance was already
    t or co-Büchi).  In case where the input automaton had no
    rejecting cycle, the Büchi acceptance was overkill: scc_filter
    will now use "t" acceptance.  This change may have unexpected
    conseqences in code paths that assume running scc_filter on a
    Büchi automaton will always return a Büchi automaton.  For those,
    a "keep_one_color" option has been added to scc_filter.

  - ltsmin's interface will now point to README.ltsmin in case an
    error is found while running divine or spins.

  - spot::is_safety_automaton() was generalized to detect any
    automaton for which the acceptance could be changed to "t" without
    changing the language.  In previous versions this function assumed
    weak automata as input, but the documentation did not reflect
    this.

  - spot::remove_alternation() has a new argument to decide whether it
    should raise an exception of return nullptr if it requires more
    acceptance sets than supported.

  Python:

  - The spot.automata() and spot.automaton() functions now accept a
    drop_false_edges=False argument to disable the historical behavior